# matrix-openai-bot

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-COMMERCIAL  README.md  docker-compose.yaml  example.yaml
.github/workflows/: docker-image.yml
src/: command.rs  main.rs  openai.rs
src/openai/: conversation.rs  tools.rs
