[package]
name = "matrix-openai-bot"
version = "0.1.0"
edition = "2024"
authors = ["Gideon Bleumink <gideon@spacebased.nl>"]


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.46", features = ["derive", "env"] }
futures = "0.3.31"
matrix-appservice = { git = "https://github.com/bleumink/matrix-appservice" }
reqwest = { version = "0.12.21", features = ["json"] }
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
